# alexandria-backend

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/: api.yml
migrations/2022-10-16-130510_create_authors/: down.sql  up.sql
migrations/2022-10-16-130517_create_books/: down.sql  up.sql
migrations/2022-10-16-130522_create_bookfragments/: down.sql  up.sql
src/: author.rs  book.rs  fragment.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
src/db/: author.rs  book.rs  fragment.rs  mod.rs
src/server/: author.rs  book.rs  fragment.rs  mod.rs
