[package]
name = "alexandria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
dotenvy = "0.15"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
chrono = { version = "0.4.22", features = ["serde"] }
